--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,6 +3,9 @@
         <div class="col-lg-5">
             <div class="card shadow-lg border-0 rounded-lg mt-5">
                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
+                <div [hidden]="loginError==false" class="alert alert-success box-msg" role="alert">
+                     Usuario y/o contraseña incorrecto
+                  </div>
                 <div class="card-body">
                     <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
                         <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Enter email address" formControlName="username"/></div>
@@ -12,7 +15,7 @@
                     </form>
                 </div>
                 <div class="card-footer text-center">
-                    <div class="small"><a routerLink="/auth/register">Necesita un cuenta? Registrese</a></div>
+                    <div class="small"><a routerLink="/signup">Necesita un cuenta? Registrese</a></div>
                 </div>
             </div>
         </div>
