--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -45,7 +45,7 @@
       <!--Header-->
       <div class="modal-header">
         <h4 class="modal-title" id="myModalLabel">Carro De Compras</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
+        <button #buttonClose type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
           <span aria-hidden="true">×</span>
         </button>
       </div>
